Closed
Bug 740702
Opened 14 years ago
Closed 13 years ago
nsHyperTextAccessible::GetDOMPointByFrameOffset should take nsAccessible*
Categories
(Core :: Disability Access APIs, defect)
Core
Disability Access APIs
Tracking
()
RESOLVED
FIXED
mozilla14
People
(Reporter: surkov, Assigned: maxli)
References
Details
(Whiteboard: [good first bug][mentor=trev.saunders@gmail.com][lang=c++])
Attachments
(1 file, 1 obsolete file)
|
3.46 KB,
patch
|
tbsaunde
:
review+
|
Details | Diff | Splinter Review |
1) replace nsIAccessible to nsAccessible in GetDOMPointByFrameOffset (http://mxr.mozilla.org/mozilla-central/source/accessible/src/html/nsHyperTextAccessible.h#393)
2) replace the following block in nsHyperTextAccessible::GetDOMPointByFrameOffset:
nsCOMPtr<nsIDOMNode> DOMNode;
aAccessible->GetDOMNode(getter_AddRefs(DOMNode));
nsCOMPtr<nsIContent> content(do_QueryInterface(DOMNode));
NS_ENSURE_STATE(content);
nsCOMPtr<nsIContent> parent(content->GetParent());
NS_ENSURE_STATE(parent);
to
NS_ASSERTION(aAccessible->IsDoc(), "Shouldn't be called on document accessible!");
nsIContent* content = aAccessible->GetContent();
NS_ASSERTION(content, "Shouldn't operate on defunct accessible!");
nsIContent* parentContent = content->GetParent();
| Assignee | ||
Comment 1•13 years ago
|
||
Assignee: nobody → maxli
Attachment #615091 -
Flags: review?(trev.saunders)
Comment 2•13 years ago
|
||
Comment on attachment 615091 [details] [diff] [review]
Patch (v1)
> nsHyperTextAccessible::GetDOMPointByFrameOffset(nsIFrame *aFrame,
> PRInt32 aOffset,
>- nsIAccessible *aAccessible,
>+ nsAccessible *aAccessible,
type* name here and below.
>+ NS_ASSERTION(aAccessible->IsDoc(),
>+ "Shouldn't be called on document accessible!");
that should be !aAccessible->IsDoc()
Attachment #615091 -
Flags: review?(trev.saunders)
| Assignee | ||
Comment 3•13 years ago
|
||
Attachment #615091 -
Attachment is obsolete: true
Attachment #615100 -
Flags: review?(trev.saunders)
Updated•13 years ago
|
Attachment #615100 -
Flags: review?(trev.saunders) → review+
| Reporter | ||
Comment 4•13 years ago
|
||
Target Milestone: --- → mozilla14
Comment 5•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•