Bug 740702 - nsHyperTextAccessible::GetDOMPointByFrameOffset should take nsAccessible*, r=tbsaunde